<resources>
    <string name="app_name">YATM</string>
    <string name="list_name">List</string>
    <string name="list_setup_name">Name:</string>
    <string name="list_setup_name_edit">Name</string>
    <string name="list_setup_type">Type:</string>
    <string name="list_setup_type_edit">Type</string>
    <string name="list_setup_date">Date:</string>
    <string name="list_setup_date_edit">Date</string>
    <string name="list_setup_priority">Priority:</string>
    <string name="list_setup_priority_edit">Priority</string>
    <string name="list_type">Family</string>
    <string name="list_priority">Medium</string>
    <string name="list_date">"date</string>

    <string-array name = "type">
        <item>School</item>
        <item>Church</item>
        <item>Family</item>
        <item>Chores</item>
        <item>Work</item>
        <item>Fun</item>
    </string-array>

    <string-array name = "sort">
        <item>Name</item>
        <item>Priority</item>
        <item>Category</item>
        <item>Date</item>
        <item>Completed</item>
    </string-array>

    <string-array name="priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>
