<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <LinearLayout
        android:id="@+id/title_setup_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="TextView"
            android:textSize="24sp" />

        <Button
            android:id="@+id/save_setup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:text="Save"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_setup_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_setup_linear_layout"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_setup_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/list_setup_name_edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/type_setup_layout_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_setup_linear_layout"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_setup_type"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:spinnerMode="dropdown" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/date_setup_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_setup_layout_layout_id"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_setup_date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/date_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/list_setup_date_edit" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/priority_setup_layout_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_setup_linear_layout"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/priority_setup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_setup_priority"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/priority_setup_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:spinnerMode="dropdown" />

    </LinearLayout>

</RelativeLayout>
